git reset soft attempt 2

--- a/notebooks/Marx/augmentation/.gitignore
+++ b/notebooks/Marx/augmentation/.gitignore
@@ -2,8 +2,8 @@
 .DS_Store
 
 # dataset + generated
-notebooks/Marx/augmentation/s_1024/
-notebooks/Marx/augmentation/aug_preview/
+s_1024/
+aug_preview/
 
 # python cache
 __pycache__/
